--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /BoardGame/build/
 /BoardGame/dist/
 /BoardGame/nbproject/private/
+BoardGame/nbproject/private/
+BoardGame/nbproject/private/private.xml
+BoardGame/nbproject/private/private.properties
