--- a/BoardGame/nbproject/project.properties
+++ b/BoardGame/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=BoardGame
-main.class=boardgame.BoardGame
+main.class=boardgame.Driver
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
