--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 BoardGame/nbproject/private/
 BoardGame/nbproject/private/private.xml
 BoardGame/nbproject/private/private.properties
+BoardGame/nbproject/private/private.xml
