--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,4 @@
 /BoardGame/nbproject/private/
 BoardGame/nbproject/private/
 BoardGame/nbproject/private/private.xml
-BoardGame/nbproject/private/private.properties
-BoardGame/nbproject/private/private.xml
+BoardGame/nbproject/
