first commit of main project and GUIs

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 BoardGame/nbproject/private/
 BoardGame/nbproject/private/private.xml
 BoardGame/nbproject/
+/MainProject/nbproject/private/
+/MainProject/build/
