updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ BoardGame/nbproject/
 /MainProject/nbproject/private/
 /MainProject/build/
 BoardGame/GuessingGameWithGUIEdit/nbproject/private/private.xml
+**/private/
