attempts at register/log in stuff

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ BoardGame/nbproject/
 /MainProject/build/
 BoardGame/GuessingGameWithGUIEdit/nbproject/private/private.xml
 **/private/
+/MainProject/dist/
