first attempt at junit test

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ BoardGame/nbproject/
 BoardGame/GuessingGameWithGUIEdit/nbproject/private/private.xml
 **/private/
 /MainProject/dist/
+/JUnitExampleNoTests/build/
